<resources>
    <string name="app_name">Deap </string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="saludo">Inicia sesión para comenzar </string>
    <string name="title_activity_index_cursos">Bienvenido</string>
    <string name="Elige_un_curso">Elige un curso</string>
    <string name="Estudiante">Curso</string>
    <string name="opciones">Opciones</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detalle_curso">detalle_curso</string>
    <string name="curso">Curso</string>
    <string name="contrasenaA">Contraseña Actual</string>
    <string name="contrasenaN">Contraseña Nueva</string>
    <string name="ejemploNoticia">No te pierdas de las actividades pedagógicas en nuestra semana de receso</string>
    <string name="actualizar">Actualizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
